--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Las mejores pizzas de mi ciudad</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./font-awesome/css/all.css" />
-    <link rel="stylesheet" href="./assets/css/normalize.css" /> 
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,13 +17,19 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <style>
+      a {
+        text-decoration: none;
+        color: #006aff;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="content">
         <header>
           <h1 class="title">Las mejores pizzas de mi ciudad</h1>
-           <hr class="line"> 
+          <hr class="line" />
         </header>
         <table class="table">
           <thead>
